[package]
name = "cardfetch"
version = "0.1.0"
authors = ["Dan Ambrogio <dan.ambrogio@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "2.33.0", features = ["yaml"]}
async-std = "1.4.0"
surf = "1.0.3"
serde_json = "1.0.45"
image = "0.22.4"
url = "2.1.1"
